<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDo+</string>
    <string name="hello_world">+</string>
    <string name="action_settings">Settings</string>
    <string name="plus">+</string>
    <string name="finish">Fertig</string>
    <string name="addevent_new">Event hinzufügen</string>
    <string name="name">Text</string>
    <string name="sharewith">Mit einem Benutzer teilen:</string>
    <string name="login">Login</string>
    <string name="synchronisieren">Synchronisieren</string>
    <string name="hinzufuegen">ToDo hinzufügen</string>
    <string name="logout">Log Out</string>
    <string name="todohinzufuegen">Fertig</string>
    <string name="setURL">set URL</string>
    <string name="erstellt_von">"Erstellt von: "</string>
    <string name="geteilt_mit_">"Geteilt mit: "</string>
    <string name="bearbeiten">Bearbeiten</string>
    <string name="loeschen">Löschen</string>
    <string name="samplesharelabel">sampleShareLabel</string>
    <string name="sampledatelabel">sampleDateLabel</string>
    <string name="sampleuserlabel">sampleUserLabel</string>
    <string name="sampletext">sampleText</string>
    <string name="sampleuser_">"SampleUser "</string>
    <string name="sampledate">sampleDate</string>
    <string name="samplename">sampleName</string>
    <string name="user">User</string>
    <string name="erstellen">Erstellen</string>
    <string name="oder">oder</string>
    <string name="passwort">Passwort</string>
    <string name="mehrere_user_trennen">Mehrere User mittels ; trennen.</string>
    <string name="autosync_pausieren">AutoSync pausieren</string>
    <string name="gruppe_erstellen">Gruppe erstellen</string>
    <string name="whitelist">Whitelist</string>
    <string name="hoch">hoch</string>
    <string name="tief">tief</string>
    <string name="normal">normal</string>
    <string name="in_einer_gruppe_freigeben_">In einer Gruppe freigeben:</string>

</resources>
