<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.falksolutions.todo.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/autosync_pausieren"
        app:showAsAction="never"/>
    
    <item 
        android:id="@+id/action_synchronisieren" 
        android:title="@string/synchronisieren"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always" />
    	
    <item
        android:id="@+id/action_hinzufuegen"
        android:title="@string/hinzufuegen"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always" />
    
    <item
        android:id="@+id/action_creategroup"
        android:title="@string/gruppe_erstellen"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_whitelist"
        android:title="@string/whitelist"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_logOut"
        android:title="@string/logout"
        app:showAsAction="never" />
    
    
    <item 
    	android:id="@+id/action_seturl"
        android:title="@string/setURL"
        android:showAsAction="never" />
        
   
    

</menu>
