<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    
    <TextView
        android:id="@+id/name"
        android:text="@string/samplename"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:paddingTop="6dip"
        android:textColor="#08088A"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:paddingBottom="2dip"
        android:text="@string/sampledate"
        android:textColor="#acacac" />

    <TextView
        android:id="@+id/userText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date"
        android:layout_below="@+id/date"
        android:gravity="left"
        android:text="@string/erstellt_von"
        android:textColor="#5d5d5d"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userText"
        android:layout_alignBottom="@+id/userText"
        android:layout_toRightOf="@+id/userText"
        android:gravity="left"
        android:text="@string/sampleuser_"
        android:textColor="#5d5d5d"
        android:textStyle="bold" />

</RelativeLayout>